# Mobile_Cobot

custom_interfaces/: CMakeLists.txt  package.xml
custom_interfaces/srv/: BoxposeEstimator.srv  GoalPoseVector.srv
detection/: package.xml  setup.py
detection/detection/: image_processing.py  image_processing_node.py  yolov8_node.py
planner_module/: CMakeLists.txt  package.xml
planner_module/include/maths/: commonmathssolver.hpp  curves.hpp
planner_module/include/miscellaneous/: conversion.hpp
planner_module/include/navigation/: nav2_client.hpp  nav2_client2.hpp  nav2_client3.hpp
planner_module/include/obstacle/: dynamic_obs_nav2.hpp  dynamic_obstacle_monitoring.hpp  gpt.hpp  moving_obstacles.hpp  obstacle_monitoring.hpp
planner_module/include/pc_processing/: cad_registration.hpp  octomap_generator.hpp  pc_processing_1.hpp  pc_processing_2.hpp  pointcloud_processor.hpp  threeD_perception.hpp
planner_module/include/planner_module/: arm_contoller.hpp  collision_free_planner.hpp  kinematics.hpp  kinematics.tpp  manager.hpp  multithreaded_fcl_loader.hpp  planner_correction.hpp  trajectoryplanner.hpp  waypoint_gen.hpp
planner_module/include/visualizations/: visualization_manager.hpp
planner_module/src/main/: arm_contoller_main.cpp  dynamic_obsnav2_main.cpp  gpt_main.cpp  nav2_main.cpp  nav2_main2.cpp  nav2_main3.cpp  obstacle_monitoring_main.cpp  ompl_test_node.cpp  pc_processing_main.cpp  pc_processing_main1.cpp  pc_processing_main2.cpp
planner_module/src/maths/: commonmathssolver.cpp  curves.cpp
planner_module/src/navigation/: nav2_client.cpp  nav2_client2.cpp  nav2_client3.cpp
planner_module/src/obstacle/: dynamic_obs_nav2.cpp  dynamic_obstacle_monitoring.cpp  gpt.cpp  moving_obstacles.cpp  obstacle_monitoring.cpp
planner_module/src/pc_processing/: cad_registration.cpp  octomap_generator.cpp  pc_processing_1.cpp  pc_processing_2.cpp  pointcloud_processor.cpp  threeD_perception.cpp
planner_module/src/planner_module/: arm_controller.cpp  collision_free_planner.cpp  kinematics.cpp  manager.cpp  multithreaded_fcl_loader.cpp  planner_correction.cpp  trajectoryplanner.cpp  waypoint_gen.cpp
planner_module/src/visualizations/: visualization_manager.cpp
r1d1_description/: setup.cfg  setup.py
r1d1_description/config/: arm_poses.yaml  display.rviz  locations.yaml  r1d1_controllers.yaml
r1d1_description/launch/: display.launch.py  gazebo_sim.launch.py  gpt.launch.py  half_human.launch.py
r1d1_description/maps/: map_1.pgm  map_1.yaml
r1d1_description/models/my_chair/: model.config  model.sdf
r1d1_description/models/my_chair/meshes/: Chair.stl  high_chair.stl
r1d1_description/urdf/: claw_gripper.xacro  common_properties.xacro  depth_sensors.xacro  half_humanoid.xacro  r1d1.gazebo  r1d1.trans  r1d1.xacro  sensors.xacro
r1d1_description/worlds/: fac.world  factory1.world  new_world1.world  seg1.world  seg2.world
